[package]
name = "two-sets"
version = "0.1.0"
edition = "2021"
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
